# deltakit-stim

./: .gitignore  BUILD  CMakeLists.txt  MODULE.bazel  NOTES.md  README.md  WORKSPACE  cibw_before_build.sh  pyproject.toml  setup.py
.github/workflows/: build_docs.yml  ci.yml  nightly.yml  publish.yml  test.yml
dev/: gen_deltakit_stim_api_reference.py  gen_deltakit_stim_stub_file.py  gen_lestim_api_reference.py  gen_lestim_stub_file.py  overwrite_dev_versions_with_date.py  regen_deltakit_stim_docs.sh  regen_lestim_docs.sh  util_gen_stub_file.py
doc/: deltakit_stim.pyi  deltakit_stim_gates.md  deltakit_stim_python_api_reference_vDev.md  lestim.pyi  lestim_gates.md  lestim_python_api_reference_vDev.md
docs/: RELEASE.md  conf.py  index.rst
file_lists/: source_files_no_main  test_files
glue/python/src/deltakit_stim/: __init__.py  _main_argv.py
glue/python/src/lestim/: __init__.py  __init__.pyi  _main_argv.py
src/stim/circuit/: circuit.cc  circuit.pybind.cc  circuit.test.cc  circuit_instruction.cc  circuit_instruction.pybind.cc  circuit_repeat_block.pybind.cc  gate_target.pybind.cc
src/stim/cmd/: command_diagram.pybind.cc
src/stim/dem/: detector_error_model.pybind.cc  detector_error_model_instruction.pybind.cc  detector_error_model_repeat_block.pybind.cc  detector_error_model_target.pybind.cc
src/stim/diagram/: gate_data_3d.cc  gate_data_svg.cc
src/stim/diagram/timeline/: timeline_3d_drawer.test.cc  timeline_ascii_drawer.test.cc
src/stim/gates/: gate_data_collapsing.cc  gate_data_controlled.cc  gate_data_noisy.cc  gate_data_pp.cc  gates.h  gates.pybind.cc  gates.test.cc
src/stim/mem/: bitword_64.h  simd_word.test.cc
src/stim/py/: compiled_detector_sampler.pybind.cc  compiled_measurement_sampler.pybind.cc  stim_pybind_test.py
src/stim/simulators/: dem_sampler.pybind.cc  error_analyzer.cc  error_analyzer.h  error_analyzer.test.cc  error_analyzer_pl_data.cc  error_analyzer_pl_data.h  error_analyzer_pl_data.test.cc  error_matcher.cc  frame_simulator.h  frame_simulator.inl  frame_simulator.pybind.cc  frame_simulator_leakage.test.cc  matched_error.pybind.cc  measurements_to_detection_events.pybind.cc  sparse_rev_frame_tracker.cc  sparse_rev_frame_tracker.h  tableau_simulator.h  tableau_simulator.inl  tableau_simulator.pybind.cc
src/stim/stabilizers/: flow.pybind.cc  pauli_string.pybind.cc  pauli_string_iter.pybind.cc  tableau.pybind.cc  tableau_iter.pybind.cc
src/stim/util_top/: circuit_flow_generators.inl  export_crumble_url.test.cc  export_qasm.cc  export_qasm.test.cc  export_quirk_url.cc  mbqc_decomposition.cc  simplified_circuit.cc  simplified_circuit.test.cc
testdata/: circuit_all_ops_3d.gltf  circuit_all_ops_3d.macos.gltf  repetition_code.macos.gltf  surface_code.macos.gltf  two_qubits_gates.macos.gltf
