[build-system]
requires = ["setuptools>=80", "wheel", "pybind11~=2.11.1"]
build-backend = "setuptools.build_meta"

[project]
name = "deltakit-stim"
version = "0.1.0"
description = "A Stim extension package to account for non-computational errors."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "Apache-2.0" }
# setup.py complains when building sdists
# See issue https://github.com/pypa/packaging-problems/issues/870
# license-files = ["LICENSE"]

authors = [{ name = "Deltakit Team", email = "deltakit@riverlane.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Quantum Computing",
  "Typing :: Typed",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Deltakit/deltakit"
Source = "https://github.com/Deltakit/deltakit"
Documentation = "https://deltakit.riverlane.com/"
Issues = "https://github.com/Deltakit/deltakit/issues"
Changelog = "https://github.com/Deltakit/deltakit/releases"

[dependency-groups]
tests_extras = [
  "qiskit",
  "qiskit_aer",
  "qiskit_qasm3_import",
  "matplotlib~=3.10,>=3.10.7",
  "numpy~=2.0",
  "pandas~=2.2,>=2.2.2",
]
test = [
  "pytest>=9.0",
  "pytest-cov>=7.0",
  "pytest-skip-slow>=0.0.5",
  { include-group = "tests_extras" },
]
lint = ["mypy~=1.17", "ruff~=0.14", "typos~=1.34", "deptry~=0.23", "pydoclint~=0.8"]
docs = [
  "myst_nb>=1.0",
  "sphinxawesome-theme>=5.3",
  "sphinx-autodoc-typehints>=3.0",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.6",
  "sphinx-autobuild>=2024.10.3",
  "myst-parser>=4.0",
  "vale>=3.12",
  "jupytext>=1.17",
  "jupyter>=1.1",
  "ipykernel>=6.29",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "docs" },
  "pre-commit~=4.2",
  "validate-pyproject>=0.24.1,<0.26.0",
]

[tool.mypy]
files = "src/**/*.py"

# The ldpc.mod2 stubs files contain syntax errors, and so make mypy fail earlier than expected
# with a SyntaxError. Ignoring the whole module for mypy.
[[tool.mypy.overrides]]
module = ["ldpc.mod2"]
follow_imports = "skip"
follow_imports_for_stubs = true

# for ruff configuration, see `ruff.toml`

[tool.pytest.ini_options]
testpaths = [
  "./src/",
]
addopts = [
  # TODO: Remove these tests ignores once bug is fixed in Numpy/Pytest/
  "--ignore=src/stim/simulators/frame_simulator_pybind_test.py",
  "--ignore=src/stim/stabilizers/tableau_pybind_test.py",
  "--ignore=src/stim/util_top/export_qasm_pybind_test.py",
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config"
]
xfail_strict = true
filterwarnings = [
  "error",
  # Note: the below line ignore a specific warning about changes in multiprocessing.
  # This warning is only raised by a few tests in deltakit-decode. This is a temporary
  # fix.
  "ignore:This process .* is multi-threaded, use of fork\\(\\) may lead to deadlocks in the child.:DeprecationWarning",
  "ignore::pytest.PytestWarning",
]

[tool.bandit]
exclude_dirs = ['.github', '.tox', '.venv', 'tools/vale.py']
skips = [
  'B101',
  'B311',
] # B101 is just use of `assert`; 'B311' is use of random module

[tool.typos.default]
locale = 'en-gb'

[tool.typos.default.extend-words]
# Don't correct "iy" - often used in the context of "probability of an IY operation"
iy = "iy"
iz = "iz"
IZ = "IZ"
anc = "anc"
BA = "BA"
youre = "you're"
distribtuion = "distribution"
interm = "interm"
ket = "ket"
ND = "ND"                         # part of NDArray
Alise = "Alise"
DEPOLARIZE = "DEPOLARIZE"
depolarization = "depolarization"
Authorization = "Authorization"   # Web-related field.
color = "color"                   # Used in matplotlib and stim APIs.
colors = "colors"
optimize = "optimize"             # scipy.optimize
ax = "ax"                         # Typical naming for matplotlib Axes instances.
center = "center"
stabilizer = "stabilizer"
stabilizers = "stabilizers"
synchronize = "synchronize"       # multiprocessing import
neighbors = "neighbors"
capitalize = "capitalize"
labeled = "labeled"
labeler = "labeler"

[tool.typos.files]
# Paths/patterns to exclude from spell checking
extend-exclude = [
  "docs/styles",
  "**/LICENSE",
  "**/*.html",
  "licenses.confluence",
]

[tool.deptry]
extend_exclude = ["deltakit_*", "docs/", "tools/"]

[tool.coverage.report]
exclude_also = ["raise NotImplementedError", "return NotImplemented"]
skip_covered = true

[tool.coverage.run]
relative_files = true

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.venv.*'
# We do not want type hints to be duplicated in docstrings.
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
# Ensure that Google style is used
check-style-mismatch = true
# Short docstrings are an open door for circumventing the linter.
skip-checking-short-docstrings = false
# For the moment, we have a baseline of documentation format errors. Eventually, this will
# be removed.
baseline = ".pydoclint_baseline.txt"

[tool.cibuildwheel]
build-verbosity = 1
archs = "x86_64"
environment-pass = ["SSH_AUTH_SOCK"]
before-build = "bash cibw_before_build.sh"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
environment = """\
SSH_AUTH_SOCK="/host$SSH_AUTH_SOCK" \
CXX=/opt/rh/gcc-toolset-11/root/usr/bin/g++ \
CC=/opt/rh/gcc-toolset-11/root/usr/bin/gcc
"""

[tool.cibuildwheel.macos]
archs = "arm64"
environment = """\
MACOSX_DEPLOYMENT_TARGET=15.0 \
LDFLAGS="-L/opt/homebrew/opt/llvm@16/lib/c++ -Wl,-rpath,/opt/homebrew/opt/llvm@16/lib/c++" \
PATH="/usr/local/opt/llvm@16/bin:$PATH" \
CPPFLAGS="-I/opt/homebrew/opt/llvm@16/include"
"""